force-app/main/default/objects/Station_Gifts__c/Station_Gifts__c.object-meta.xml
<CustomObject>
    <label>Store Gifts</label>
    <nameField>
        <displayFormat>SG-{000}</displayFormat>
        <label>Store Gift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Gifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>