force-app/main/default/objects/Station_Gifts__c/fields/Gift__c.field-meta.xml
<CustomField>
    <fullName>Gift__c</fullName>
    <label>Gift</label>
    <referenceTo>Gift__c</referenceTo>
    <relationshipName>Station_Gifts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>