force-app/main/default/objects/Station_Gifts__c/fields/Quantity_Added__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Added__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>