force-app/main/default/objects/Station_Gifts__c/fields/Quantity_InStock__c.field-meta.xml
<CustomField>
    <fullName>Quantity_InStock__c</fullName>
    <formula>Quantity_Added__c  -  Quantity_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity InStock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>