force-app/main/default/objects/Station_Gifts__c/fields/Restock_Level__c.field-meta.xml
<CustomField>
    <fullName>Restock_Level__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Restock Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>