force-app/main/default/objects/Station_Gifts__c/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Store</label>
    <referenceTo>Station__c</referenceTo>
    <relationshipLabel>Store Gifts</relationshipLabel>
    <relationshipName>Station_Gifts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>