force-app/main/default/objects/Station_Gifts__c/validationRules/Quantity_Added_is_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Added_is_zero</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity_Added__c =0</errorConditionFormula>
    <errorDisplayField>Quantity_Added__c</errorDisplayField>
    <errorMessage>Quantity Added is zero pls add quantity</errorMessage>
</ValidationRule>