force-app/main/default/objects/Station_Gifts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Gift__c</columns>
    <columns>Station__c</columns>
    <columns>Quantity_Added__c</columns>
    <columns>Quantity_Used__c</columns>
    <columns>Quantity_InStock__c</columns>
    <columns>Restock_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>